--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "core-js": "^2.4.1",
+    "@ngrx/core": "1.0.0",
+    "@ngrx/store": "2.1.2",
+    "@ngrx/store-devtools": "3.0.0",
+    "@ngrx/store-log-monitor": "3.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
